Apply 2-column desktop style
On desktop, apply a 2-column style, with the always-visible fixed-width
incident list on the left, and the map on the right.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <title>Wave Traffic</title>
 
         <script>
+            /**
+             * Calculate the inner viewport height and store it in a CSS
+             * variable. This lets us access the true viewport height in
+             * iPhone Safari.
+             */
             const setInnerVh = () => {
                 const innerVh = window.innerHeight;
                 document.documentElement.style.setProperty(
