Apply custom icons to list; fix Chrome iOS issue
-   Apply the custom incident icons to the list items.

-   Set `--innerVh` on `orientationchange` also, so that rotating
    portrait <--> landscape on Chrome iOS works.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
             window.addEventListener("load", setInnerVh);
             window.addEventListener("resize", setInnerVh);
+            window.addEventListener("orientationchange", setInnerVh);
         </script>
     </head>
     <body>
